--- a/PuPlantGame/index.html
+++ b/PuPlantGame/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cocos2d-html5 Hello World test</title>
-    <link rel="icon" type="image/GIF" href="res/favicon.ico"/>
+    <title>TimeShiftGame</title>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
-<div style="text-align: center;">
-    <canvas id="gameCanvas" width="800" height="450"></canvas>
+<div style="width: 320px;height: 480px;margin: 0 auto;">
+    <canvas id="gameCanvas" width="320" height="480" ></canvas>
 </div>
+<div id="cou" style="width:320px;margin: 0 auto;"></div>
+
+
 </body>
 </html>
 <script src="cocos2d.js"></script>
